syntax = "proto3";

package calculator;

option java_package = "com.yifei.calculator";
option java_multiple_files = true;

message CalculateRequest {
  int32 leftOperator = 1;
  int32 rightOperator = 2;
}

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message AverageRequest {
  int32 number = 1;
}

message MaxRequest {
  int32 number = 1;
}

message CalculateResponse {
  int32 result = 1;
}

message PrimeNumberDecompositionResponse {
  int32 result = 1;
}

message AverageResponse {
  double result = 1;
}

message MaxResponse {
  int32 result = 1;
}

service CalculatorService {
  rpc sum(CalculateRequest) returns (CalculateResponse) {};
  rpc primeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
  rpc average(stream AverageRequest) returns (AverageResponse) {};
  rpc max(stream MaxRequest) returns (stream MaxResponse) {};
}